# LightSear

./: README.md  pyproject.toml
lightsear/: __init__.py  _ua.py  _xpath.py  exceptions.py  models.py
lightsear/engines/: __init__.py  baidu.py  bing.py  duckduckgo.py  google.py
tests/: test_baidu.py  test_bing.py  test_duckduckgo.py  test_google.py  test_lightsear_api.py
