[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightsear"
version = "0.1.0"
description = "Lightweight web search adapters (logic derived from SearXNG engines)"
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.0",
    "scrapling[fetchers]>=0.4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["lightsear"]

# Local development uses conda env "neko" (see .vscode/settings.json).
[tool.lightsear]
conda-environment = "neko"
